# RayTracer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  test.bat  test.sh
Include/: CMakeLists.txt
Include/RayTracer/: Color.hpp  Matrix.hpp  Ray.hpp  Sphere.hpp  Vector3.hpp  Vector4.hpp
Include/RayTracer/Math/: Vector3.hpp  Vector4.hpp
Source/: CMakeLists.txt  Main.cpp  Matrix.cpp  Sphere.cpp
Source/Math/: Point.hpp  Tuple.hpp  Vector.hpp
Tests/: CMakeLists.txt  Color.cpp  Matrix.cpp  Ray.cpp  Sphere.cpp  Vector3.cpp  Vector4.cpp
Tests/Math/: Tuple.cpp  Vector3.cpp  Vector4.cpp
